welcome.lessons.welcome.methods.returning.MethodsReturning.scala.code
while(!est sur biscuit) {
	avance()
}
